--- a/src/app/heroes/heroes.component.css
+++ b/src/app/heroes/heroes.component.css
@@ -20,14 +20,7 @@
   background-color: #ddd;
   left: 0.1em;
 }
-.heroes li.selected {
-  background-color: #cfd8dc;
-  color: white;
-}
-.heroes li.selected:hover {
-  background-color: #bbd8dc;
-  color: white;
-}
+
 .heroes .badge {
   display: inline-block;
   font-size: small;
@@ -41,4 +34,15 @@
   height: 1.8em;
   margin-right: 0.8em;
   border-radius: 4px 0 0 4px;
+}
+.heroes a {
+  color: #333;
+  text-decoration: none;
+  position: relative;
+  display: block;
+  width: 250px;
+}
+
+.heroes a:hover {
+  color: #607d8b;
 }
